# m5-claude-code-notification

./: .gitignore  PLUGIN_INSTALL_GUIDE.md  README.md  ble_scan.py  marketplace.json  plan.md  plugin.json  pyproject.toml
.claude/: settings.local.json
.claude-plugin/: marketplace.json
hook/: client.py  package.json  run.ps1  run.sh  tsconfig.json
m5stick/: platformio.ini
m5stick/src/: main.cpp
plugins/m5stick-notify/.claude-plugin/: plugin.json
plugins/m5stick-notify/hooks/: client.py  hooks.json
